# 98-brk-13F-auto-analysis

./: .env.example  .gitignore  CURSOR_RULES.md  README.md  render.yaml
.github/workflows/: ci.yml  deploy.yml  ingest.yml  pages.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pre-commit-config.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  db.py  drive.py  main.py  scheduler.py  schemas.py
backend/app/api/: narrative.py  routes.py
backend/app/ingestion/: __init__.py  agg_builder.py  alerts.py  db_persist.py  fetcher.py  merger.py  normalizer.py  parser.py  run.py  unit_detector.py  validator.py  writer.py
backend/app/models/: __init__.py  holdings.py
backend/tests/: __init__.py  conftest.py  test_health.py  test_merger.py  test_story_mode_e2e.py  test_unit_detector.py
docs/: DEPLOY.md  GITHUB_CREATE_REPO.md  acceptance-tests.md  chart-style-guide.md  design-system.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: lint-charts.js
frontend/src/app/: HomePageClient.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/download/: page.tsx
frontend/src/components/: HoldingsTable.tsx  KpiCard.tsx  LayoutClient.tsx
frontend/src/components/charts/: ChangesLeaderboard.tsx  ChartFrame.tsx  Footnote.tsx  UnifiedTooltip.tsx
frontend/src/components/tables/: HoldingsExplorerTable.tsx  (+1 more)
frontend/src/i18n/: context.tsx
frontend/src/lib/: api.ts
scripts/: validate_data.py
(+16 files in other folders)
